# gpcc

./: .gitignore  CMakeLists.productive.cmake  CMakeLists.txt  CMakeLists.unittest.cmake  README.md  common.cmake  doxygen_templates.txt  exception_usage.txt  failed_unit_tests.txt  feature_requests.txt  history.txt  license_exception.txt  readme_gpcc_configuration.txt
src/: CMakeLists.txt  coding_style.dox  gpcc.dox
src/Compiler/: CMakeLists.txt  Compiler.dox  builtins.hpp  definitions.hpp
src/ResourceManagement/: CMakeLists.txt  ResourceManagement.dox
src/StdIf/: CMakeLists.txt  IIRQ2ThreadWakeup.hpp  IRandomAccessStorage.hpp  IRandomAccessStorageCLI.cpp  IRandomAccessStorageCLI.hpp  StdIf.dox
src/Stream/: CMakeLists.txt  IStreamReader.cpp  IStreamReader.hpp  IStreamWriter.cpp  IStreamWriter.hpp  MemStreamReader.cpp  MemStreamReader.hpp  MemStreamWriter.cpp  MemStreamWriter.hpp  Stream.dox  StreamErrors.hpp  StreamReaderBase.cpp  StreamReaderBase.hpp  StreamWriterBase.cpp  StreamWriterBase.hpp
src/callback/: CMakeLists.txt  ICallback.hpp  MultiCallback.hpp  MultiCallback.tcc  MultiCallbackSM.hpp  MultiCallbackSM.tcc  callback.dox
src/cli/: CLI.cpp  CLI.hpp  CLIColors.hpp  CMakeLists.txt  Command.cpp  Command.hpp  ICLINotifiable.hpp  ISyncSerialIO_to_ITerminal.cpp  ISyncSerialIO_to_ITerminal.hpp  ITerminal.hpp  StdIO_to_ITerminal.cpp  StdIO_to_ITerminal.hpp  cli.dox  exceptions.cpp  exceptions.hpp
src/compiler/: CMakeLists.txt  compiler.dox
src/container/: BitField.cpp  BitField.hpp  CMakeLists.txt  IntrusiveDList.hpp  IntrusiveDList.tcc  RAMBlock.cpp  RAMBlock.hpp  container.dox
src/cood/: CMakeLists.txt  IObjectAccess.hpp  IObjectNotifiable.hpp  IObjectRegistration.hpp  IQueryAccessRights.hpp  Object.cpp  Object.hpp  ObjectARRAY.cpp  ObjectARRAY.hpp  ObjectARRAY_wicb.cpp  ObjectARRAY_wicb.hpp  ObjectDictionary.cpp  ObjectDictionary.hpp  ObjectPtr.cpp  ObjectPtr.hpp  ObjectRECORD.cpp  ObjectRECORD.hpp  ObjectRECORD_wicb.cpp  ObjectRECORD_wicb.hpp  ObjectVAR.cpp  ObjectVAR.hpp  ObjectVAR_wicb.cpp  ObjectVAR_wicb.hpp  cood.dox  data_types.cpp  data_types.hpp  exceptions.hpp  sdo_abort_codes.cpp  sdo_abort_codes.hpp
src/crc/: CMakeLists.txt  crc.dox  simple_crc.cpp  simple_crc.hpp
src/doc/: coding_style.dox  gpcc.dox
src/dsp/: CMakeLists.txt  dsp.dox
src/execution/: CMakeLists.txt  execution.dox
src/file_systems/: CMakeLists.txt  IFileAndDirectoryStorage.hpp  IFileStorage.hpp  exceptions.hpp  file_systems.dox
src/hash/: CMakeLists.txt  hash.dox  md5.cpp  md5.hpp
src/log/: CMakeLists.txt  Logger.cpp  Logger.hpp  log.dox  log_levels.cpp  log_levels.hpp  log_tools.cpp  log_tools.hpp
src/math/: CMakeLists.txt  checks.hpp  int_math.cpp  int_math.hpp  math.dox
src/osal/: AdvancedMutexLocker.hpp  CMakeLists.txt  ConditionVariable.hpp  IThreadRegistry.hpp  Mutex.hpp  MutexLocker.hpp  Panic.hpp  RWLock.hpp  RWLockReadLocker.hpp  RWLockWriteLocker.hpp  Semaphore.hpp  Thread.hpp  ThreadRegistry.hpp  cancellation_points.txt  exceptions.hpp  osal.dox
src/raii/: CMakeLists.txt  raii.dox  scope_guard.hpp
src/resource_management/: CMakeLists.txt  resource_management.dox
src/stdif/: CMakeLists.txt  stdif.dox
src/stream/: CMakeLists.txt  IStreamReader.cpp  IStreamWriter.cpp  MemStreamReader.cpp  MemStreamWriter.cpp  StreamReaderBase.cpp  StreamWriterBase.cpp  stream.dox
src/string/: CMakeLists.txt  SharedString.cpp  SharedString.hpp  StringComposer.cpp  levenshtein_distance.cpp  levenshtein_distance.hpp  string.dox  tools.cpp  tools.hpp
src/time/: CMakeLists.txt  TimePoint.cpp  TimePoint.hpp  TimeSpan.cpp  TimeSpan.hpp  clock.hpp  time.dox
testcases/: CMakeLists.txt  empty.cpp
testcases/callback/: CMakeLists.txt  TestMultiCallback.cpp  TestMultiCallbackSM.cpp  TestMultiCallbackSM_OneParam.cpp  TestMultiCallback_OneParam.cpp
testcases/cli/: CMakeLists.txt  TestCLI.cpp  TestCLI_withICLINotifiable.cpp  TestCommand.cpp  TestFakeTerminal.cpp
testcases/compiler/: CMakeLists.txt  TestCompilerBuiltins.cpp  TestCompilerDefs.cpp
testcases/container/: CMakeLists.txt  TestBitField.cpp  TestIntrusiveDList.cpp  TestRAMBlock.cpp
testcases/cood/: CMakeLists.txt  ObjectVAR_wicb_withASM.hpp  ObjectVARwithASM.hpp  TestObjectARRAY_wicb.cpp  TestObjectDictionary.cpp  TestObjectPtr.cpp  TestObjectRECORD_wicb.cpp  TestObjectVAR_wicb.cpp  Test_data_types.cpp  Test_sdo_abort_codes.cpp  cood.dox
testcases/crc/: CMakeLists.txt  Test_simple_crc.cpp
testcases/doc/: gpcc-testcases.dox
testcases/dsp/: CMakeLists.txt
testcases/execution/: CMakeLists.txt  TestUnittestDurationLimiter.cpp
testcases/fakes/: fakes.dox
testcases/file_systems/: CMakeLists.txt
testcases/hash/: CMakeLists.txt  TestMD5.cpp  TestMD5Benchmark.cpp
testcases/log/: CMakeLists.txt  TestLogger.cpp  Test_log_levels.cpp  Test_log_tools.cpp
testcases/math/: CMakeLists.txt  Test_checks.cpp  Test_int_math.cpp
testcases/osal/: CMakeLists.txt  TestAdvancedMutexLocker.cpp  TestConditionVariable.cpp  TestMutex.cpp  TestMutexLocker.cpp  TestPanic.cpp  TestRWLock.cpp  TestRWLockReadLocker.cpp  TestRWLockWriteLocker.cpp  TestSemaphore.cpp  TestThread.cpp  TestThreadRegistry.cpp
testcases/raii/: CMakeLists.txt  Test_scope_guard.cpp
testcases/resource_management/: CMakeLists.txt
testcases/stdif/: CMakeLists.txt
testcases/stream/: CMakeLists.txt  TestIStreamReader.cpp  TestIStreamWriter.cpp  TestMemStreamReader.cpp  TestMemStreamWriter.cpp
testcases/string/: CMakeLists.txt  TestSharedString.cpp  TestStringComposer.cpp  TestStringComposer_bool.cpp  TestStringComposer_char.cpp  TestStringComposer_cstring.cpp  TestStringComposer_double.cpp  TestStringComposer_float.cpp  TestStringComposer_int.cpp  TestStringComposer_long.cpp  TestStringComposer_long_long.cpp  TestStringComposer_longdouble.cpp  TestStringComposer_short.cpp  TestStringComposer_stdstring.cpp  TestStringComposer_unsigned_char.cpp  TestStringComposer_unsigned_int.cpp  TestStringComposer_unsigned_long.cpp  TestStringComposer_unsigned_long_long.cpp  TestStringComposer_unsigned_short.cpp  Test_levenshtein_distance.cpp  Test_tools.cpp
(+1040 files in other folders)
