# -------------------------------------
# gpcc/src
# -------------------------------------
add_subdirectory(callback)
add_subdirectory(cli)
add_subdirectory(compiler)
add_subdirectory(container)
add_subdirectory(cood)
add_subdirectory(crc)
add_subdirectory(dsp)
add_subdirectory(execution)
add_subdirectory(file_systems)
add_subdirectory(hash)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(osal)
add_subdirectory(raii)
add_subdirectory(ResourceManagement)
add_subdirectory(StdIf)
add_subdirectory(Stream)
add_subdirectory(string)
add_subdirectory(time)
